[package]
name = "rust_project_template"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0 OR Unicode-DFS-2016 OR MPL-2.0 OR BSD-2-Clause OR BSD-3-Clause OR ISC OR CC0-1.0"

[dependencies]
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
